--- a/kantonsvergleich_einbaucode.html
+++ b/kantonsvergleich_einbaucode.html
@@ -1,96 +1,87 @@
-<script type="text/javascript" src="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/stat_zg_generals.js"></script>
-<script type="text/javascript" src="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/stat_zg_row.js"></script>
-<script type="text/javascript" src="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/stat_zg_choropleth.js"></script>
-<script type="text/javascript" src="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/libraries/jquery.slinky.js"></script>
+<link rel="stylesheet" type="text/css" href="/behoerden/gesundheitsdirektion/statistikfachstelle/daten/css/statistik.css">
 
-	<div class="slincky-wrapper">
-		<section>
-			<p>Wählen Sie das Vergleichsthema</p>
-			<div id="menu" class="slinky-menu">
-				<ul>
-<li><h2>Themenbereich (bitte wählen)</h2></li>
-					<li>
-						<a href="#">Bevölkerung</a>
-						<ul>
-							<li><a href="javascript:;" class="selection" id="01-01">Bevölkerung</a></li>
-							<li><a href="javascript:;" class="selection" id="01-02">Bevölkerungswachstum seit 2000</a></li>
-							<li><a href="javascript:;" class="selection" id="01-03">Jugendquotient</a></li>
-							<li><a href="javascript:;" class="selection" id="01-04">Altersquotient</a></li>
-							<li><a href="javascript:;" class="selection" id="01-05">Ausländeranteil</a></li>
-							<li><a href="javascript:;" class="selection" id="01-06">Bevölkerungsszenario</a></li>
-							<li><a href="javascript:;" class="selection" id="01-07">Wanderungssaldo pro Einwohner/in</a></li>
-							<li><a href="javascript:;" class="selection" id="01-08">Anteil Katholiken</a></li>
-							<li><a href="javascript:;" class="selection" id="01-09">Anteil Einpersonenhaushalte</a></li>
-							<li><a href="javascript:;" class="selection" id="01-10">Anteil Familienhaushalte</a></li>
-						</ul>
-					</li>
-					<li>
-						<a href="#">Wirtschaft</a>
-						<ul>
-							<li><a href="javascript:;" class="selection" id="04-01">BIP pro Einwohner/in</a></li>
-							<li><a href="javascript:;" class="selection" id="04-02">Arbeitslosenquote</a></li>
-							<li><a href="javascript:;" class="selection" id="04-03">Neu gegründete Unternehmen pro Einwohner/in</a></li>
-							<li><a href="javascript:;" class="selection" id="04-04">Beschäftigte pro Einwohner/in</a></li>
-							<!--<li><a href="javascript:;" class="selection" id="04-05">Wachstum der Beschäftigten seit 2000</a></li>-->
-							<li><a href="javascript:;" class="selection" id="04-06">Anteil Beschäftigte im Industriesektor</a></li>
-							<li><a href="javascript:;" class="selection" id="04-07">Anteil Beschäftigte in KMUs</a></li>
-							<li><a href="javascript:;" class="selection" id="04-08">Erwerbstätigenquote</a></li>
-						</ul>
-					</li>
-					<li>
-						<a href="#">Bildung</a>
-						<ul>
-							<li><a href="javascript:;" class="selection" id="15-01">Bildungsstand</a></li>
-							<li><a href="javascript:;" class="selection" id="15-02">Maturitätsquote</a></li>
-							<li><a href="javascript:;" class="selection" id="15-03">Hochschuleinstrittsquote</a></li>
-							<li><a href="javascript:;" class="selection" id="15-04">Studienerfolgsquote</a></li>
-							<li><a href="javascript:;" class="selection" id="15-05">Hochschulabschlussquote</a></li>
-						</ul>
-					</li>
-					<li>
-						<a href="#">Mobilität und Verkehr</a>
-						<ul>
-							<li><a href="javascript:;" class="selection" id="11-01">Motorisierungungsgrad</a></li>
-							<li><a href="javascript:;" class="selection" id="11-02">Verkehrsunfälle pro 10000 Einwohner</a></li>
-							<li><a href="javascript:;" class="selection" id="11-03">Relativer Pendlersaldo</a></li>
-							<li><a href="javascript:;" class="selection" id="11-04">Pendleranteil</a></li>
-							<li><a href="javascript:;" class="selection" id="11-05">Anteil ÖV-Pendler</a></li>
-						</ul>
-					</li>
-					<li>
-						<a href="#">Wohnen und Bau</a>
-						<ul>
-							<li><a href="javascript:;" class="selection" id="09-01">Wohneigentumsquote</a></li>
-							<li><a href="javascript:;" class="selection" id="09-02">Leerwohnungsziffer</a></li>
-							<li><a href="javascript:;" class="selection" id="09-03">Wohnflächenverbrauch pro Person</a></li>
-							<li><a href="javascript:;" class="selection" id="09-04">Quadratmetermietpreis</a></li>
-							<li><a href="javascript:;" class="selection" id="09-05">Einfamilienhausanteil</a></li>
-							<li><a href="javascript:;" class="selection" id="09-06">Neuwohnungen pro 1000 Einwohner</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</section>
+<div class="slincky-wrapper">
+	<section>
+		<p>Wählen Sie das Vergleichsthema</p>
+		<div id="slinkymenu" class="slinky-menu">
+			<ul>
+				<li><h2>Themenbereich (bitte wählen)</h2></li>
+				<li>
+					<a href="#"><span>Bevölkerung</span></a>
+					<ul>
+						<li><a href="javascript:;" class="selection" id="01-01"><span>Bevölkerung</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-02"><span>Bevölkerungswachstum seit 2000</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-03"><span>Jugendquotient</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-04"><span>Altersquotient</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-05"><span>Ausländeranteil</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-06"><span>Bevölkerungsszenario</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-07"><span>Wanderungssaldo pro Einwohner/in</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-08"><span>Anteil Katholiken</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-09"><span>Anteil Einpersonenhaushalte</span></a></li>
+						<li><a href="javascript:;" class="selection" id="01-10"><span>Anteil Familienhaushalte</span></a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#"><span>Wirtschaft</span></a>
+					<ul>
+						<li><a href="javascript:;" class="selection" id="04-01"><span>BIP pro Einwohner/in</span></a></li>
+						<li><a href="javascript:;" class="selection" id="04-02"><span>Arbeitslosenquote</span></a></li>
+						<li><a href="javascript:;" class="selection" id="04-03"><span>Neu gegründete Unternehmen pro Einwohner/in</span></a></li>
+						<li><a href="javascript:;" class="selection" id="04-04"><span>Beschäftigte pro Einwohner/in</span></a></li>
+						<!--<li><a href="javascript:;" class="selection" id="04-05"><span>Wachstum der Beschäftigten seit 2000</a></li>-->
+						<li><a href="javascript:;" class="selection" id="04-06"><span>Anteil Beschäftigte im Industriesektor</span></a></li>
+						<li><a href="javascript:;" class="selection" id="04-07"><span>Anteil Beschäftigte in KMUs</span></a></li>
+						<li><a href="javascript:;" class="selection" id="04-08"><span>Erwerbstätigenquote</span></a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#"><span>Bildung</span></a>
+					<ul>
+						<li><a href="javascript:;" class="selection" id="15-01"><span>Bildungsstand</span></a></li>
+						<li><a href="javascript:;" class="selection" id="15-02"><span>Maturitätsquote</span></a></li>
+						<li><a href="javascript:;" class="selection" id="15-03"><span>Hochschuleinstrittsquote</span></a></li>
+						<li><a href="javascript:;" class="selection" id="15-04"><span>Studienerfolgsquote</span></a></li>
+						<li><a href="javascript:;" class="selection" id="15-05"><span>Hochschulabschlussquote</span></a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#"><span>Mobilität und Verkehr</span></a>
+					<ul>
+						<li><a href="javascript:;" class="selection" id="11-01"><span>Motorisierungungsgrad</span></a></li>
+						<li><a href="javascript:;" class="selection" id="11-02"><span>Verkehrsunfälle pro 10000 Einwohner</span></a></li>
+						<li><a href="javascript:;" class="selection" id="11-03"><span>Relativer Pendlersaldo</span></a></li>
+						<li><a href="javascript:;" class="selection" id="11-04"><span>Pendleranteil</span></a></li>
+						<li><a href="javascript:;" class="selection" id="11-05"><span>Anteil ÖV-Pendler</span></a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#"><span>Wohnen und Bau</span></a>
+					<ul>
+						<li><a href="javascript:;" class="selection" id="09-01"><span>Wohneigentumsquote</span></a></li>
+						<li><a href="javascript:;" class="selection" id="09-02"><span>Leerwohnungsziffer</span></a></li>
+						<li><a href="javascript:;" class="selection" id="09-03"><span>Wohnflächenverbrauch pro Person</span></a></li>
+						<li><a href="javascript:;" class="selection" id="09-04"><span>Quadratmetermietpreis</span></a></li>
+						<li><a href="javascript:;" class="selection" id="09-05"><span>Einfamilienhausanteil</span></a></li>
+						<li><a href="javascript:;" class="selection" id="09-06"><span>Neuwohnungen pro 1000 Einwohner</span></a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</section>
 
-	</div>
+</div>
 
 
 <script>
-	$(document).ready(function() {
-		$('#menu').slinky({
-			title: true,
-			label: "Zurück",
-			
-		});
-	});
+
 </script>
 
 <!--<div style="float:right">Anzeigen als:
 <ul class="subelements-listing" style="float:right">
 <li><a id="desc" class="hiderow" href="javascript:;">Balken verbergen</a> </li>
 <li><a id="desc" class="hidemap" href="javascript:;">Karte verbergen</a> </li>
-</ul>-->
-</div>
+</ul>
+</div>-->
 <div>
 <div id="default1">
 	<div id="title" class="title"></div>
@@ -123,95 +114,115 @@
 <script>
 
 //var uri = new URI(window.location.href);
-
-args1 ={
-	number:1,													
-	//csv_path:"/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-01-01.csv",		
-	//dimension:"Kanton",											
-	//group:"Anzahl",							
-	characteristics:["Schweiz","Zürich","Bern","Luzern","Uri","Schwyz","Obwalden","Nidwalden","Glarus","Zug","Freiburg","Solothurn","Basel-Stadt","Basel-Landschaft","Schaffhausen",
-"Appenzell Ausserrhoden","Appenzell Innerrhoden","St. Gallen","Graubünden","Aargau","Thurgau","Tessin","Waadt","Wallis","Neuenburg","Genf","Jura"],										
-	showTotal:true,												
-	showAnteil:false,											
-	highlight:{"Zug":2, "Schweiz":1}													
-}
-
-args2 ={
-	number:2,													
-	//csv_path:"/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-01-01.csv",		
-	//dimension:"Kanton",											
-	//group:"Anzahl",							
-}
-
-if (typeof uri.search(true)["chart"] == "undefined") {
-	var chart="01-01"
-	args1.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
-	args2.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
-	uri.setSearch("chart", chart)
-	window.history.pushState("", "", uri.href());
-} else {
-	var chart=uri.search(true)["chart"]
-	args1.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
-	args2.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
-}
-
-if (typeof uri.search(true)["order"] == "undefined") {
-	args1.order="desc"
-	$("#"+args1.order).addClass("selected")
-	$("#"+args1.order).parent().addClass("selected")
-	uri.setSearch("order", args1.order)
-	window.history.pushState("", "", uri.href());
-} else {
-	args1.order = uri.search(true)["order"];
-	$("#"+args1.order).addClass("selected")
-	$("#"+args1.order).parent().addClass("selected")
-}
-
-loadRow(args1);
-loadChoroplethMap(args2);
-
-$( ".selection" ).click(function(){
-	selectedkey=$(this).attr('id');
-    args1.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+selectedkey+".csv");
-	args2.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+selectedkey+".csv");
-	d3.selectAll('#datatablecontainer1').remove();
-	$('#actionMenu1 > ul > li > a:nth-child(2)').text("Daten anzeigen/herunterladen");
-	d3.selectAll('#datatablecontainer2').remove();
-	$('#actionMenu2 > ul > li > a:nth-child(2)').text("Daten anzeigen/herunterladen");
-	loadRow(args1);
-    loadChoroplethMap(args2);
-	uri.setSearch("chart", selectedkey)
-	window.history.pushState("", "", uri.href());
+require.config({
+	baseUrl: '/behoerden/gesundheitsdirektion/statistikfachstelle/daten/js/',
+	paths: {
+		libs: "libraries/",
+		//slinky: "https://unpkg.com/jquery-slinky@4.2.1/dist/slinky.min"
+	}
 });
 
-$(".order").click(function(){
-	$(".order").removeClass("selected");
-	$(".order").parent().removeClass("selected");
-	args1.order=$(this).attr('id');
-	$(this).addClass("selected");
-	$(this).parent().addClass("selected");
-	loadRow(args1);
-	uri.setSearch("order", args1.order)
-	window.history.pushState("", "", uri.href());
+require(['stat_zg_generals','libs/jquery.slinky'], function (generals,slinky) {
+	$(document).ready(function() {
+		$("#slinkymenu span.link-https > a").unwrap();
+		window.slinky = $('#slinkymenu').slinky({
+			title: true,
+			label: "Zurück",
+			theme: "slinky-theme-default"
+		})
+	});
 });
 
-//Not used
-$(".hiderow").click(function(){
-	$('#default1').toggle(500);
-	if ($(this).text() == 'Balken anzeigen') {
-                $(this).text('Balken verbergen');
-        } else {
-                $(this).text('Balken anzeigen');
-        }
-});
+require(['stat_zg_row','stat_zg_choropleth'], function (row,choropleth) {
+		
+	args1 ={
+		number:1,													
+		//csv_path:"/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-01-01.csv",		
+		//dimension:"Kanton",											
+		//group:"Anzahl",							
+		characteristics:["Schweiz","Zürich","Bern","Luzern","Uri","Schwyz","Obwalden","Nidwalden","Glarus","Zug","Freiburg","Solothurn","Basel-Stadt","Basel-Landschaft","Schaffhausen",
+	"Appenzell Ausserrhoden","Appenzell Innerrhoden","St. Gallen","Graubünden","Aargau","Thurgau","Tessin","Waadt","Wallis","Neuenburg","Genf","Jura"],										
+		showTotal:true,												
+		showAnteil:false,											
+		highlight:{"Zug":2, "Schweiz":1}													
+	}
 
-$(".hidemap").click(function(){
-	$('#default2').toggle(500);
-	if ($(this).text() == 'Karte anzeigen') {
-                $(this).text('Karte verbergen');
-        } else {
-                $(this).text('Karte anzeigen');
-        }
-});
+	args2 ={
+		number:2,													
+		//csv_path:"/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-01-01.csv",		
+		//dimension:"Kanton",											
+		//group:"Anzahl",							
+	}
 
+	if (typeof uri.search(true)["chart"] == "undefined") {
+		var chart="01-01"
+		args1.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
+		args2.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
+		uri.setSearch("chart", chart)
+		window.history.pushState("", "", uri.href());
+	} else {
+		var chart=uri.search(true)["chart"]
+		args1.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
+		args2.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+chart+".csv");
+	}
+
+	if (typeof uri.search(true)["order"] == "undefined") {
+		args1.order="desc"
+		$("#"+args1.order).addClass("selected")
+		$("#"+args1.order).parent().addClass("selected")
+		uri.setSearch("order", args1.order)
+		window.history.pushState("", "", uri.href());
+	} else {
+		args1.order = uri.search(true)["order"];
+		$("#"+args1.order).addClass("selected")
+		$("#"+args1.order).parent().addClass("selected")
+	}
+
+	row.load(args1);
+	choropleth.load(args2);
+
+	$( ".selection" ).click(function(){
+		selectedkey=$(this).attr('id');
+		args1.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+selectedkey+".csv");
+		args2.csv_path=String("/behoerden/gesundheitsdirektion/statistikfachstelle/daten/kantonsvergleich/result-vergleich-"+selectedkey+".csv");
+		d3.selectAll('#datatablecontainer1').remove();
+		$('#actionMenu1 > ul > li > a:nth-child(2)').text("Daten anzeigen/herunterladen");
+		d3.selectAll('#datatablecontainer2').remove();
+		$('#actionMenu2 > ul > li > a:nth-child(2)').text("Daten anzeigen/herunterladen");
+		row.load(args1);
+		choropleth.load(args2);
+		uri.setSearch("chart", selectedkey)
+		window.history.pushState("", "", uri.href());
+	});
+
+	$(".order").click(function(){
+		$(".order").removeClass("selected");
+		$(".order").parent().removeClass("selected");
+		args1.order=$(this).attr('id');
+		$(this).addClass("selected");
+		$(this).parent().addClass("selected");
+		row.load(args1);
+		uri.setSearch("order", args1.order)
+		window.history.pushState("", "", uri.href());
+	});
+
+	//Not used
+	$(".hiderow").click(function(){
+		$('#default1').toggle(500);
+		if ($(this).text() == 'Balken anzeigen') {
+					$(this).text('Balken verbergen');
+			} else {
+					$(this).text('Balken anzeigen');
+			}
+	});
+
+	$(".hidemap").click(function(){
+		$('#default2').toggle(500);
+		if ($(this).text() == 'Karte anzeigen') {
+					$(this).text('Karte verbergen');
+			} else {
+					$(this).text('Karte anzeigen');
+			}
+	});
+});
 </script>
